Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ p {
 
 .btn {
   margin: 1.5rem;
+  float: left;
   background-color: #f2f2f2;
   border: 3px solid #333;
   color: black;
